# JobPulse

./: .gitignore  .replit  6729fa01_myticas-job-feed-dice.xml  AI_COST_AUDIT.md  AI_COST_AUDIT_RAW.md  AI_COST_TELEMETRY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CONFIG.md  DEPLOYMENT_READY.md  JOBPULSE.md  JOBPULSE_MULTI_TENANT_ROADMAP.md  JOBPULSE_TECHNICAL_DOCUMENTATION.md  LIVE_APPLICATION_STATUS.md  README.md  README_AI_CLASSIFICATION.md  RECRUITER_MAPPINGS.md  REFERENCE_NUMBER_PROCESS.md  UPLOAD_CHECKLIST.md  VALIDATION_REPORT.md  XML_TESTING_SUMMARY.md  add_ai_classifications_precise.py  add_bhatsid_to_xml.py  add_name_variations.py  ai_classification_monitor.py  analyze_xml_differences.py  app.log.1  app.log.2  app.log.3  app.py  app.py.backup  apply_ai_classifications.py  automation_service.py  backup_service.py  bulk_dedup_external_guide.md  bullhorn_jobs.json  bullhorn_jobs_complete.json  bullhorn_service.py  bullhorn_support_email.txt  candidate_vetting_service.py  check_job_34085.py  (+354 more)
.agent/: credentials.json
.agents/: agent_assets_metadata.toml
.claude/: settings.local.json
alembic/: env.py
archive_obsolete_scripts/: fix_cdata_complete.py  restore_cdata_formatting.py
attached_assets/: 06037525-_Bullhorn_Support_Case_-_Not_able_to_save_a_specific_1774621754358.docx  0F1DFE3B-B3F0-4490-0D6FF98F9CF0A3D9_1769780283655.xlsx  Added_XML_Node_Mapping_1753413384431.xlsx  (+251 more)
job_application_app/: .replit  DEPLOYMENT_GUIDE.md  README.md  SETUP_INSTRUCTIONS.md  app.py  job_application_service.py  main.py  pyproject.toml
job_application_app/static/js/: job-application.js
job_application_app/templates/: 404.html  apply.html  index.html
(+547 files in other folders)
