[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "lxml>=6.1.0",
    "paramiko>=3.5.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.33.0",
    "sendgrid>=6.12.4",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.6",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.13.0",
    "cryptography>=48.0.1",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "certifi>=2026.2.25",
    "pandas>=2.3.1",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "pytz>=2025.2",
    "openai>=2.6.1",
    "pymupdf>=1.26.7",
    "matplotlib>=3.10.9",
]
